# my-comfy-custom-nodes

ComfyUI-Crystools/: __init__.py  pyproject.toml
ComfyUI-GGUF/: dequant.py  loader.py  nodes.py  pyproject.toml
ComfyUI-IPAdapter-Flux/: README.md  README_zh.md  attention_processor_advanced.py  ipadapter_flux.py  ipadapter_flux_advanced.py  pyproject.toml  utils.py
ComfyUI-TiledDiffusion/: README.md
ComfyUI-ToSVG/: __init__.py  requirements.txt  svgnode.py
ComfyUI-WanVideoWrapper/: nodes_model_loading.py  nodes_sampler.py  nodes_utility.py  readme.md
ComfyUI-nunchaku/: .tracking
ComfyUI_Sonic/: __init__.py  node_utils.py  pyproject.toml  sonic_node.py
VibeVoice-ComfyUI/: node_list.json  pyproject.toml
cg-use-everywhere/: .tracking
comfyui-advanced-controlnet/: .tracking
comfyui-art-venture/: .tracking
comfyui-glifnodes/: .tracking  LICENSE  pyproject.toml  requirements.txt
comfyui-glifnodes/.github/workflows/: publish.yml
hf-model-downloader/: .gitignore  .tracking  README.md  __init__.py  model_config.json  model_downloader_node.py  pyproject.toml  requirements.txt
hf-model-downloader/js/: model_downloader.css  model_downloader.js
kaytool/: .gitignore  CHANGELOG.md  README.md  __init__.py  pyproject.toml  requirements.txt
kaytool/.github/workflows/: publish.yml
kaytool/api/: clean_vram.py  resources.py
kaytool/json/: Baidu_Translater_config.json  Strong_Prompt.json
kaytool/locales/en/: main.json  nodeDefs.json  settings.json
kaytool/locales/fr/: main.json  nodeDefs.json  settings.json
kaytool/locales/ja/: main.json  nodeDefs.json  settings.json
kaytool/locales/ko/: main.json  nodeDefs.json  settings.json
kaytool/locales/ru/: main.json  nodeDefs.json  settings.json
kaytool/locales/zh/: main.json  nodeDefs.json  settings.json
kaytool/nodes/: ab_images.py  abc_math.py  aio_translater.py  baidu_translater.py  birefnet_loader.py  color_adjustment.py  custom_save_image.py  display_any.py  image_composer.py  image_cropper.py  image_mask_composer.py  image_resizer.py  image_size_extractor.py  load_image_folder.py  mask_blur_plus.py  mask_filler.py  preview_mask.py  preview_mask_plus.py  rembg_loader.py  remove_bg.py  slider_10.py  slider_100.py  slider_1000.py  strong_prompt.py  tencent_translater.py  text.py  to_int.py
kaytool/web/: ab_images.js  appearance.js  cleanvram.js  common_display.js  customweblogo.js  getset.js  gululu.js  layoutOptimizer.js  nodealign.js  notification.js  quickaddsetget.js  resourcemonitor.js  settings.js  startome.js  workflowpng.js
kaytool/web/lib/: marked.esm.js
(+70 files in other folders)
