[project]
name = "comfyui-ipadapter-flux"
description = "nodes for flux ipadapter released by shakker-labs"
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["einops==0.8.0", "transformers>=4.37.2", "diffusers", "sentencepiece>=0.2.0", "protobuf>=4.25.5"]

[project.urls]
Repository = "https://github.com/Shakker-Labs/ComfyUI-IPAdapter-Flux"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "shakker-labs"
DisplayName = "ComfyUI-IPAdapter-Flux"
Icon = ""
