[project]
name = "comfyui-glifnodes"
description = "Custom set of nodes used by glif.app. With glif you can build ai apps that are powered by custom comfy workflows."
version = "1.0.2"
license = { file = "LICENSE" }
dependencies = ["diffusers>=0.28.0"]

[project.urls]
Repository = "https://github.com/glifxyz/ComfyUI-GlifNodes"

[tool.comfy]
PublisherId = "dham"
DisplayName = "ComfyUI-GlifNodes"
Icon = "🇬"

