[project]
name = "hf-model-downloader"
description = "Easily download and install 2D to 3D, Qwen Image, Wan, and Flux models from Hugging Face"
version = "0.2.9"
license = {file = "LICENSE"}
dependencies = ["huggingface_hub>=0.19.0", "aiohttp>=3.8.0"]

[project.urls]
Repository = "https://github.com/michaelgold/ComfyUI-HF-Model-Downloader"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "michaelgold"
DisplayName = "ComfyUI-HF-Model-Downloader"
Icon = ""
