[project]
name = "kaytool"
description ="KayTool boosts ComfyUI workflow efficiency with powerful tools like: image processing (resize, color, blur, expand, merge, crop), background/mask tasks via BiRefNet/RemBG, wireless data transfer (Set&Get), AI translation (Tencent/Baidu), Professional high-precision resource monitoring, dynamic math operations, flexible text handling, precision sliders, metadata/color profile-supported image saving, batch processing via folder loading, canvas node map export as PNG with metadata, quick Run options via right-click, node alignment toolbar with custom styles, and custom ComfyUI logo integration."
version = "0.70.17"
license = {file = "LICENSE"}
dependencies = ["rembg", "timm", "opencv-python", "py-cpuinfo", "pynvml"]

[project.urls]
Repository = "https://github.com/kk8bit/kaytool"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "kk8bit"
DisplayName = "KayTool"
Icon = ""
